--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christian Engel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "typescript": "4.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "14.11.10"
+  }
 }
