--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Christian Engel",
   "license": "ISC",
   "dependencies": {
+    "jest": "26.6.0",
     "typescript": "4.0.3"
   },
   "devDependencies": {
-    "@types/node": "14.11.10"
+    "@types/jest": "26.0.14",
+    "@types/node": "14.11.10",
+    "ts-jest": "26.4.1"
   }
 }
