--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,15 @@
   "name": "lednet-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "substitute": "node index.js substitute"
   },
   "dependencies": {
+    "node": "^11.5.0",
     "rpi-ws281x": "^1.0.34",
-    "node": "^11.5.0"
+    "socket.io": "2.3.0"
   },
   "author": "Christian Engel",
   "license": "ISC"
