--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "lednet",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A UDP based message module for nodeJS for controlling a WS2812 LED strip",
-  "main": "index.js",
+  "main": "dist/sdk/index.js",
+  "files": [
+    "dist/**/*.js"
+  ],
   "scripts": {
     "client": "cd client && npm start",
     "clientSimulator": "cd client && npm run substitute",
     "clientUI": "cd clientUI && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd clientUI && npm i && cd ../client && cd npm i"
+    "postinstall": "cd clientUI && npm i && cd ../client && cd npm i",
+    "prepublishOnly": "tsc"
   },
-  "author": "Christian Engel",
+  "author": {
+    "name": "Christian Engel",
+    "url": "https://parastudios.de"
+  },
   "license": "ISC",
   "dependencies": {
-    "@types/d3-color": "2.0.0",
     "d3-color": "2.0.0",
-    "d3-interpolate": "2.0.1",
-    "jest": "26.6.0",
-    "typescript": "4.0.3"
+    "d3-interpolate": "2.0.1"
   },
   "devDependencies": {
+    "@types/d3-color": "2.0.0",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.10",
-    "ts-jest": "26.4.1"
+    "ts-jest": "26.4.1",
+    "jest": "26.6.0",
+    "typescript": "4.0.3"
   }
 }
