--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "d3": "6.2.0",
     "node": "^11.5.0",
-    "rpi-ws281x": "^1.0.34",
-    "socket.io": "2.3.0"
+    "socket.io": "2.3.0",
+    "rpi-ws281x": "^1.0.34"
   },
   "author": "Christian Engel",
   "license": "ISC"
