--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "ts-jest": "26.4.1",
     "jest": "26.6.0",
     "typescript": "4.0.3"
+  },
+  "dependencies": {
+    "@types/uuid": "8.3.0",
+    "uuid": "8.3.1"
   }
 }
