--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "d3": "6.2.0",
+    "socket.io": "2.3.0",
     "@types/d3": "5.16.3",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.10",
     "ts-jest": "26.4.1",
     "jest": "26.6.0",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "@types/uuid": "8.3.0"
   },
   "dependencies": {
-    "@types/uuid": "8.3.0",
     "uuid": "8.3.1"
   }
 }
